multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-one
spec:
  containers:
  - name: veg-container
    image: inderpreet26/veg:v2.0.0
    ports:
    - containerPort: 3000
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-two
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
