pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: veg-container
    image:  inderpreet26/veg:v2.0.0
    ports:
    - containerPort: 80
