deployment_organicghee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organic-deployment
  labels:
    app: organic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: organic
  template:
    metadata:
      labels:
        app: organic
    spec:
      containers:
        - name: organic-container
          image: organic-gh
          ports:
            - containerPort: 5656
---
apiVersion: v1
kind: Service
metadata:
  name: organic-service
spec:
  selector:
    app: organic
  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
  type: ClusterIP
