deployment_veg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inderpreet-deployment
  labels:
    first: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: inderpreet-container
          image: inderpreet26/veg:v2.0.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: inderpreet-service
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30007
