service_em.yaml
apiVersion: v1
kind: Service

metadata:
  name: elite-motors-service

spec:
  selector:
    app: elite-motors

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
