httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: veg-route
spec:
  parentRefs:
  - name: veg-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /veg
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: veg-service
      port: 3000
